syntax = "proto3";

package greet;

option go_package="posts_service/api;servicepb";

message Post {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string category = 4;
  int64 user_id = 5;
}

message CreatePostRequest{
  Post post = 1;
}

message CreatePostResponse{
  string status = 1;
}

message UpdatePostRequest{
  Post post = 1;
}

message UpdatePostResponse{
  string status = 1;
}

message DeletePostRequest{
  int64 post_id = 1;
}

message DeletePostResponse{
  string status = 1;
}

message GetPostRequest{
  int32 post_id = 1;
}

message GetPostResponse{
  Post post = 1;
}

message GetAllPostsRequest{
}

message GetAllPostsResponse{
  Post post = 1;
}

service PostService {

  rpc CreatePost(CreatePostRequest) returns(CreatePostResponse) {};
  rpc UpdatePost(UpdatePostRequest) returns(UpdatePostResponse) {};
  rpc DeletePost(DeletePostRequest) returns(DeletePostResponse) {};
  rpc GetPost(GetPostRequest) returns(GetPostResponse) {}
  rpc GetAllPosts(GetAllPostsRequest) returns(stream GetAllPostsResponse) {};

}

